--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ email: contact@whsrobotics.org
 author: Westwood Robotics
 description: Follow Westwood Robotics' latest updates! Westwood Robotics specializes
   in STEM and robotics education for all children.
-baseurl: "/blog"
+baseurl: ""
 url: https://blog.whsrobotics.org
 instagram_username: wwrobotics1757
 twitter_username: wwrobotics1757
