Add website URL to footer

--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ collections:
     title: Uploads
     output: true
 email: contact@whsrobotics.org
+website: https://whsrobotics.org
 author: Westwood Robotics
 description: Follow Westwood Robotics' latest updates! Westwood Robotics specializes
   in STEM and robotics education for all children.
